# cmake-helpers

./: .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  helpers.cmake  index.html  pyproject.toml  release-please-config.json
.github/workflows/: lint.yaml  pages.yaml  pre-commit.yaml  release.yaml  test.yaml
0.1.1/: .buildinfo  code_generation.html  combinators.html  genindex.html  index.html  readme.html  search.html  searchindex.js  utilities.html
0.1.1/.doctrees/: code_generation.doctree  combinators.doctree  environment.pickle  index.doctree  readme.doctree  utilities.doctree
docs/: Makefile  README.rst  cmake_helpers.rst  code_generation.rst  combinators.rst  conf.py  index.rst  make.bat  readme.rst  utilities.rst
docs/_static/: custom.css
docs/_templates/: versioning.html
main/: .buildinfo  code_generation.html  combinators.html  genindex.html  index.html  readme.html  search.html  searchindex.js  utilities.html
main/.doctrees/: code_generation.doctree  combinators.doctree  environment.pickle  index.doctree  readme.doctree  utilities.doctree
main/_sources/: combinators.rst  index.rst  readme.rst  utilities.rst
main/_static/: custom.css
src/: code_generation.cmake  combinators.cmake  helpers.cmake  toolbelt.cmake  utilities.cmake
tests/: __init__.py  check.py  fixtures.py  test_add_dep.py  test_check_includes.py  test_check_symbol.py  test_check_symbols.py  test_create_header_file.py  test_embed.py  test_enum.py  test_program_dependencies.py  test_required.py  test_setup_gtest.py  test_setup_testing.py
tests/check_symbol_add_definitions/: CMakeLists.txt  main.cpp  test_check_symbols.py
tests/resources/add_dep/: CMakeLists.txt  conanfile.txt  main.cpp
tests/resources/check_includes/: CMakeLists.txt  main.cpp
tests/resources/check_symbol/: CMakeLists.txt
tests/resources/embed/: CMakeLists.txt
tests/resources/enum/: CMakeLists.txt
tests/resources/required/: CMakeLists.txt
tests/resources/setup_gtest/: CMakeLists.txt  main.cpp
tests/test_data/add_dep/: CMakeLists.txt
tests/test_data/check_includes/: CMakeLists.txt
tests/test_data/check_symbol/: CMakeLists.txt
tests/test_data/check_symbols/: CMakeLists.txt
tests/test_data/create_header_file/: CMakeLists.txt  embed_one.txt  embed_two.txt  main.cpp
tests/test_data/embed/: CMakeLists.txt  main.cpp
tests/test_data/enum/: CMakeLists.txt
tests/test_data/program_dependencies/: CMakeLists.txt  main.cpp
tests/test_data/required/: CMakeLists.txt
tests/test_data/setup_gtest/: CMakeLists.txt
tests/test_data/setup_testing/: CMakeLists.txt  main.cpp
v0.1.0/: .buildinfo  code_generation.html  combinators.html  genindex.html  index.html  readme.html  search.html  searchindex.js  utilities.html
v0.1.0/.doctrees/: code_generation.doctree  combinators.doctree  environment.pickle  index.doctree  readme.doctree  utilities.doctree
v0.1.0/_sources/: readme.rst
v0.1.0/_static/: custom.css
v0.1.1/: .buildinfo  code_generation.html  combinators.html  genindex.html  index.html  objects.inv  readme.html  search.html  searchindex.js  utilities.html
v0.1.1/.doctrees/: code_generation.doctree  combinators.doctree  environment.pickle  index.doctree  readme.doctree  utilities.doctree
v0.1.1/_static/: index.html
v0.2.0/: .buildinfo  code_generation.html  combinators.html  genindex.html  index.html  readme.html  search.html  searchindex.js  utilities.html
v0.2.0/.doctrees/: code_generation.doctree  combinators.doctree  environment.pickle  index.doctree  readme.doctree  utilities.doctree
v0.3.0/: .buildinfo  code_generation.html  combinators.html  genindex.html  index.html  readme.html  search.html  searchindex.js  utilities.html
v0.3.0/.doctrees/: code_generation.doctree  combinators.doctree  environment.pickle  index.doctree  readme.doctree  utilities.doctree
