[tool.poetry]
name = "cmake-helpers"
version = "0.1.0"
description = "Testing and codegen python code for the cmake-helpers library."
authors = ["Marko Malenic <mmalenic1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
cmake = "^3"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
