[tool.poetry]
name = "cmake-helpers"
version = "0.1.0"
description = "Testing and codegen python code for the cmake-helpers library."
authors = ["Marko Malenic <mmalenic1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
cmake = "^3"
conan = "^2"
brotlicffi = "^1"
sphinx = "^7"
sphinxcontrib-moderncmakedomain = "^3"
sphinx-markdown-builder = "^0.6"
sphinx-book-theme = "^1"
sphinx-multiversion = "^0.2"
pre-commit = "^3"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
python_files = "check*.py test_*.py"
python_functions = "check* test_*"
