[tool.poetry]
name = "cmake-toolbelt"
version = "0.3.0"
description = "Testing and doc generation python code for the cmake-toolbelt library."
authors = ["Marko Malenic <mmalenic1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
cmake = "^3"
conan = "^2"
brotlicffi = "^1"
sphinx = "^8"
sphinxcontrib-moderncmakedomain = "^3"
sphinx-markdown-builder = "^0.6"
sphinx-book-theme = "^1"
sphinx-multiversion = "^0.2"
pre-commit = "^4"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
python_files = "check*.py test_*.py"
python_functions = "check* test_*"
